[gd_scene load_steps=20 format=2]

[ext_resource path="res://misc/josh1.png" type="Texture" id=1]
[ext_resource path="res://PlayerHealth.gd" type="Script" id=2]
[ext_resource path="res://battle.gd" type="Script" id=3]
[ext_resource path="res://EnemyHealth.gd" type="Script" id=4]
[ext_resource path="res://Attack.gd" type="Script" id=5]
[ext_resource path="res://misc/dickhead.png" type="Texture" id=6]
[ext_resource path="res://PowerBar.gd" type="Script" id=7]
[ext_resource path="res://Button.gd" type="Script" id=8]
[ext_resource path="res://misc/bar.png" type="Texture" id=9]
[ext_resource path="res://Panel3.gd" type="Script" id=10]
[ext_resource path="res://GameEndPanel.gd" type="Script" id=11]
[ext_resource path="res://HealButtonPanel.gd" type="Script" id=12]
[ext_resource path="res://HealButton.gd" type="Script" id=13]
[ext_resource path="res://HealSmashButton.gd" type="Script" id=14]
[ext_resource path="res://CountdownPanel.gd" type="Script" id=15]
[ext_resource path="res://misc/atkbutton.png" type="Texture" id=16]
[ext_resource path="res://misc/healbutton.png" type="Texture" id=17]
[ext_resource path="res://misc/mashbutton.png" type="Texture" id=18]
[ext_resource path="res://misc/timebutton.png" type="Texture" id=19]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AttackButtonPanel" type="Panel" parent="CanvasLayer"]
margin_left = 311.0
margin_top = 510.0
margin_right = 518.0
margin_bottom = 573.0

[node name="Attack" type="Button" parent="CanvasLayer/AttackButtonPanel"]
margin_left = -28.0
margin_top = -49.0
margin_right = 242.0
margin_bottom = 106.0
icon = ExtResource( 16 )
flat = true
script = ExtResource( 5 )

[node name="HealButtonPanel" type="Panel" parent="CanvasLayer"]
margin_left = 580.0
margin_top = 511.0
margin_right = 735.0
margin_bottom = 574.0
script = ExtResource( 12 )

[node name="HealButton" type="Button" parent="CanvasLayer/HealButtonPanel"]
margin_left = -29.0
margin_top = -41.0
margin_right = 199.0
margin_bottom = 96.0
icon = ExtResource( 17 )
flat = true
script = ExtResource( 13 )

[node name="EnemyHealth" type="ProgressBar" parent="CanvasLayer"]
margin_right = 4.0
margin_bottom = 14.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/EnemyHealth"]
margin_left = 541.041
margin_top = 31.0906
margin_right = 889.037
margin_bottom = 366.091
value = 100.0
texture_progress = ExtResource( 9 )
tint_under = Color( 0.321569, 0.933333, 0.14902, 1 )
tint_progress = Color( 0.913725, 0.772549, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="ProgressBar" parent="CanvasLayer"]
margin_right = 4.0
margin_bottom = 14.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/PlayerHealth"]
margin_left = 34.7461
margin_top = 269.586
margin_right = 382.746
margin_bottom = 604.586
value = 100.0
texture_progress = ExtResource( 9 )
tint_under = Color( 0.321569, 0.933333, 0.14902, 1 )
tint_progress = Color( 0.913725, 0.772549, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 322.583
margin_top = 165.111
margin_right = 693.583
margin_bottom = 426.111
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" type="ProgressBar" parent="CanvasLayer/Panel3"]
margin_left = 43.0
margin_top = 52.0
margin_right = 339.0
margin_bottom = 116.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Panel3"]
margin_left = 79.417
margin_top = 122.889
margin_right = 303.417
margin_bottom = 252.889
icon = ExtResource( 19 )
flat = true
script = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/Panel3/Button"]

[node name="GameEndPanel" type="Panel" parent="CanvasLayer"]
visible = false
margin_right = 1028.0
margin_bottom = 603.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameEndPanel"]
margin_left = 343.266
margin_top = 148.325
margin_right = 603.266
margin_bottom = 262.325
text = "dsfsdf
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownPanel" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 334.677
margin_top = 137.907
margin_right = 705.677
margin_bottom = 419.907
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/CountdownPanel"]
margin_left = 65.7273
margin_top = 42.4997
margin_right = 311.727
margin_bottom = 98.4997
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealSmashButton" type="Button" parent="CanvasLayer/CountdownPanel"]
margin_left = 63.323
margin_top = 115.093
margin_right = 304.323
margin_bottom = 257.093
icon = ExtResource( 18 )
flat = true
script = ExtResource( 14 )

[node name="CountdownLabel" type="Label" parent="CanvasLayer/CountdownPanel"]
margin_left = 141.091
margin_top = 186.681
margin_right = 230.091
margin_bottom = 232.681

[node name="Josh" type="Sprite" parent="."]
position = Vector2( 147.078, 463.862 )
texture = ExtResource( 1 )
flip_h = true

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 663, 172 )
scale = Vector2( 2, 1 )
texture = ExtResource( 6 )
